[tool.poetry]
name = "token"
version = "0.1.0"
description = ""
authors = ["Mark Anthony Gibbins <xiy3x0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
